[package]
name = "rusty-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.12"
serde = "1.0.145"
dotenv = "0.15.0"
serde_json = "1.0.85"
rand = "0.8.5"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11"
